# currency_exchange

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: run_tests.yml
alembic/: env.py
alembic/versions/: 0aa0669495f4_set_default_value.py  1c9962126f80_init.py  502c5f0d0ad1_username_set_unique.py  8d881ef418c3_id_set_default_gen_random_uuid.py
app/api/endpoints/: __init__.py  currency.py  users.py
app/api/models/: user.py
app/api/schemas/: currency.py  user.py
app/api/services/: errors.py  exchange.py  user.py
app/core/: config.py  security.py
app/database/: db.py
app/utils/: daily_json.js  errors.py  external_api.py  lru_cache_ttl.py
tests/: conftest.py  docker-compose.yaml  test_currency.py  test_external_api.py  test_user.py
